# kotekpy

./: pyproject.toml  requirements.txt
src/: main.py
src/kotekpy.egg-info/: PKG-INFO  SOURCES.txt
