[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kotekpy"
version = "0.99"
authors = [
  { name="Kamil Kownacki", email="kamil.kownacki3@gmail.com" },
]
description = "Qrcodes with GUI"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU v3",
    "Operating System :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/Gorillq/kotekpy"
"Bug Tracker" = "https://github.com/Gorillq/kotekpy/issues"